; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_display.c_intel_set_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_display.c_intel_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { i32 }
%struct.drm_display_mode = type { i32 }
%struct.drm_framebuffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intel_set_mode(%struct.drm_crtc* %0, %struct.drm_display_mode* %1, i32 %2, i32 %3, %struct.drm_framebuffer* %4) #0 {
  %6 = alloca %struct.drm_crtc*, align 8
  %7 = alloca %struct.drm_display_mode*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.drm_framebuffer*, align 8
  %11 = alloca i32, align 4
  store %struct.drm_crtc* %0, %struct.drm_crtc** %6, align 8
  store %struct.drm_display_mode* %1, %struct.drm_display_mode** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.drm_framebuffer* %4, %struct.drm_framebuffer** %10, align 8
  %12 = load %struct.drm_crtc*, %struct.drm_crtc** %6, align 8
  %13 = load %struct.drm_display_mode*, %struct.drm_display_mode** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.drm_framebuffer*, %struct.drm_framebuffer** %10, align 8
  %17 = call i32 @__intel_set_mode(%struct.drm_crtc* %12, %struct.drm_display_mode* %13, i32 %14, i32 %15, %struct.drm_framebuffer* %16)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %5
  %21 = load %struct.drm_crtc*, %struct.drm_crtc** %6, align 8
  %22 = getelementptr inbounds %struct.drm_crtc, %struct.drm_crtc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @intel_modeset_check_state(i32 %23)
  br label %25

25:                                               ; preds = %20, %5
  %26 = load i32, i32* %11, align 4
  ret i32 %26
}

declare dso_local i32 @__intel_set_mode(%struct.drm_crtc*, %struct.drm_display_mode*, i32, i32, %struct.drm_framebuffer*) #1

declare dso_local i32 @intel_modeset_check_state(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
